Added "Getting Started" lesson page

--- a/html/lessons/cyberbullying.html
+++ b/html/lessons/cyberbullying.html
@@ -95,7 +95,8 @@
 <p class="lessonsubheader">Post-Activity   Questions</p>
 <p>What   do   you   think   are   the   consequences   of   cyberbullying?   For   the   victim?   For   the   bully? Think   about   the   websites      you   go   on   or   the   social   media   sites   you   use.   Do   you   ever   see cyberbullying   happen   on   those   sites?   What   will   you   do   to   stop   it?</p>
 <p>How   is   being   an   upstander   different   offline   and   online?   What   are   things   that   we   need   to   think carefully   about   when   trying   to   stop   a   cyberbully?   (anonymity,   retaliation,   etc)</p>
-<p><i>Compiled   October   2017   by   the   Cornell   Social   Media   Lab   -   sml.comm.cornell.edu Feedback   is   welcome!</i></p>
+<p><i>Compiled   October   2017   by   the   Cornell   Social   Media   Lab   -   sml.comm.cornell.edu 
+  <p>Feedback   is   welcome!</i></p>
 
       </div>
 
