--- a/html/lessons.html
+++ b/html/lessons.html
@@ -27,7 +27,7 @@
 
       <div class="lessons_container">
         <h3>Lessons</h3>
-        <a href="lessonPage.html"><div class="lessonsBox">
+        <a href="lessons/gettingstarted.html"><div class="lessonsBox">
           <div class="Top_PicHalf" id="lesson_GetStart"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Getting Started on TestDrive: Usernames, Passwords, and Bios, Oh My!</p>
