Fixed logo href

--- a/html/lessons/gettingstarted.html
+++ b/html/lessons/gettingstarted.html
@@ -11,7 +11,7 @@
     <body>
     	<div class="topnav">
         <div id="logoCont">
-          <a id="logo" href="../index.html">TestDrive</a>
+          <a id="logo" href="../../index.html">TestDrive</a>
         </div>
           
         <div id="linksCont">
