added smart self presentation page

--- a/html/lessons.html
+++ b/html/lessons.html
@@ -34,7 +34,7 @@
             <p>This lesson will help teach kids how to choose smart usernames and passwords when they create accounts on social media sites (and other kinds of websites too). It also serves to get kids oriented on Social Media TestDrive.</p>
           </div>
         </div></a>
-        <a href="lessonPage.html"><div class="lessonsBox">
+        <a href="lessons/smartselfpres.html"><div class="lessonsBox">
           <div class="Top_PicHalf" id="lesson_SelfPres"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Smart Self-Presentation</p>
