Added "Information Literacy" page

--- a/html/lessons.html
+++ b/html/lessons.html
@@ -48,7 +48,7 @@
             <p> This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes "upstanding" behavior in cyberbullying situations.</p>
           </div>
         </div></a>
-        <a href="lessonPage.html"><div class="lessonsBox">
+        <a href="lessons/informationliteracy.html"><div class="lessonsBox">
           <div class="Top_PicHalf" id="lesson_Info"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">Information Literacy</p>
