--- a/html/lessons/smartselfpres.html
+++ b/html/lessons/smartselfpres.html
@@ -78,10 +78,11 @@
       </ul>
       
       <p class="lessonsubheader">Post-Activity   Questions</p>
-      What   do   you   think   are   the   consequences   of   poor   self-presentation? What   kind   of   self-disclosures   do   you   make   on   social   media?
-      How   do   you   want   others   to   see   you   on   different   social   media   sites?
-      Think   about   about   a   post   you   made   in   the   past,   or   something   you've   shared   with   someone   else. Do   you   think   you   would've   "liked"   that   post?   Or   would   you   reply   to   your   past   self   with   advice on   how   to   make   smarter   disclosures?
-      If   you   created   a   post   of   your   own,   what   did   it   say   and   why?
+      <p>What   do   you   think   are   the   consequences   of   poor   self-presentation? What   kind   of   self-disclosures   do   you   make   on   social   media?</p>
+      <p>How   do   you   want   others   to   see   you   on   different   social   media   sites?</p>
+      <p>Think   about   about   a   post   you   made   in   the   past,   or   something   you've   shared   with   someone   else. Do   you   think   you   would've   "liked"   that   post?   Or   would   you   reply   to   your   past   self   with   advice on   how   to   make   smarter   disclosures?</p>
+      <p>If   you   created   a   post   of   your   own,   what   did   it   say   and   why?</p>
+      <br>
       <p><i>(Content   based   on   Fordham   University   Privacy   Educators   Program)</p>
       <p>Compiled   September   2017   by   the   Cornell   Social   Media   Lab   -   sml.comm.cornell.edu </p>
       <p>Feedback   is   welcome!</i></p>
