--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="section2">
-        <a href="html/lessonPage.html"><div class="long_lesson">
+        <a href="html/lessons/smartselfpres.html"><div class="long_lesson">
           <div id="home_SelfPres" class="LL_img"></div>
           <div class="LL_text">
             <p class="lessonBox_title">Smart Self Presentation</p>
