Fixed non utf-8 text

--- a/html/lessons/informationliteracy.html
+++ b/html/lessons/informationliteracy.html
@@ -28,16 +28,16 @@
       <div class="lessonheader"><h1 class="lessontitle">Information Literacy</h1></div>
       <div class="lessoncontent">
         <p class="lessonsubheader">Background   Information</p>
-        <p>Issues   of   information   literacy   are   a   hot   topic   in   recent   years.   Evaluating   the   quality   and   veracity of   facts,   and   detecting   “fake   news”   -   are   vital   skills   for   today’s   youth.   This   module   will   help teach   young   people   how   to   find   and   critically   assess   facts   and   data   they   find   on   social   media sites   in   a   conscientious   manner.</p>
+        <p>Issues   of   information   literacy   are   a   hot   topic   in   recent   years.   Evaluating   the   quality   and   veracity of   facts,   and   detecting   "fake   news"   &mdash;   are   vital   skills   for   today's   youth.   This   module   will   help teach   young   people   how   to   find   and   critically   assess   facts   and   data   they   find   on   social   media sites   in   a   conscientious   manner.</p>
         <p>We   define   information   literacy   as   the   ability   to   cautiously   search   and   evaluate   information online.   While   social   media   sites   serve   as   convenient   platforms   for   us   to   look   for   materials   -- from   completing   a   class   project   to   enhancing   our   everyday   knowledge   --   not   every   source   and medium   is   reliable.   Information   literacy   helps   us   not   only   determine   the   accuracy   of   internet content   and   interpret   and   use   new   information   intelligently,   but   also   helps   us   be   responsible when   creating   and   communicating   ideas.</p>
-        <p>Social   media   sites   introduce   additional   complications   when   it   comes   to   evaluating   source credibility.   Evaluating   the   validity   of   news   is   difficult,   but   when   news   is   shared   by   people   we know,   our   judgments   about   source   credibility   can   be   clouded   by   our   perceptions   of   the credibility   of   those   people.   It   can   be   hard   to   stop   incorrect   information   when   it’s   being   shared by   people   we   generally   trust,   or   by   many   people   at   once.</p>
+        <p>Social   media   sites   introduce   additional   complications   when   it   comes   to   evaluating   source credibility.   Evaluating   the   validity   of   news   is   difficult,   but   when   news   is   shared   by   people   we know,   our   judgments   about   source   credibility   can   be   clouded   by   our   perceptions   of   the credibility   of   those   people.   It   can   be   hard   to   stop   incorrect   information   when   it's   being   shared by   people   we   generally   trust,   or   by   many   people   at   once.</p>
 
         <p class="lessonsubheader">Introductory   Questions</p>
         <ul>
           <li>What   kind   of   things   do   people   share   on   social   media   sites?</li>
           <li>How   do   we   know   if   the   things   we   find   online   are   real   or   fake?</li>
-          <li>What   does   “information   literacy”   mean?</li>
-          <li>What   is   “fake   news”?   Why   is   it   important   to   be   able   to   tell   whether   information   online   is real   or   fake?</li>
+          <li>What   does   "information   literacy"   mean?</li>
+          <li>What   is   "fake   news"?   Why   is   it   important   to   be   able   to   tell   whether   information   online   is real   or   fake?</li>
           <li>Have   you   ever   seen   fake   news   on   the   internet?   If   so,   how   do   you   know   it   is   fake?</li>
           <li>Has   your   friend   ever   shared   a   fact   or   news   story   with   you   online   that   you   thought   was fake?</li>
           <li>Do   you   consider   yourself   a   smart   internet   user   when   evaluating   and   using   information online?</li>
@@ -47,9 +47,9 @@
         <p class="lessonsubheader">News/Facts   Evaluation   questions</p>
         <ul>
           <li>If   you   need   to   look   for   information   for   a   class   project   online,   where   do   you   usually   go? How   do   you   know   your   sources   are   accurate   and   reliable?</li>
-          <li>What   are   your   “go-to”   places   when   viewing   information   or   news   for   fun   online?   How   do you   know   the   source   is   dependable?</li>
+          <li>What   are   your   "go-to"   places   when   viewing   information   or   news   for   fun   online?   How   do you   know   the   source   is   dependable?</li>
           <li>What   source   of   information   does   your   school   tell   you   to   use?</li>
-          <li>What   does   “satire”   mean?   How   is   it   different   from   something   being   fake?</li>
+          <li>What   does   "satire"   mean?   How   is   it   different   from   something   being   fake?</li>
         </ul>
 
         <p class="lessonsubheader">Activity   Prep   Questions</p>
@@ -61,13 +61,13 @@
         </ul>
 
         <p class="lessonsubheader">Activity:   Can   you   spot   the   difference   between   fake   news   and   real   facts?</p>
-        <p>In   this   activity,   we’re   going   to   ask   you   to   identify   which   news   people   shared   are   real   and   which of   them   are   fake.</p>
+        <p>In   this   activity,   we're   going   to   ask   you   to   identify   which   news   people   shared   are   real   and   which of   them   are   fake.</p>
         <p>There   are   eight   easy   ways   to   identify   fake   news   or   information:</p>
         <ol>
           <li>Visuals   use   emojis/   crazy   images/   bright   colors/   wild   fonts   meant   to   attract   attention</li>
           <li>Uses   excessive   punctuation   or   ALL   CAPS   for   emphasis</li>
-          <li>Does   it   seem   like   it’s   trying   to   create   an   emotional   reaction?   Make   you   sad   or   angry?</li>
-          <li>Does   it   claim   to   be   telling   a   secret/   something   an   authority   figure   doesn’t   want   you   to know?</li>
+          <li>Does   it   seem   like   it's   trying   to   create   an   emotional   reaction?   Make   you   sad   or   angry?</li>
+          <li>Does   it   claim   to   be   telling   a   secret/   something   an   authority   figure   doesn't   want   you   to know?</li>
           <li>There   is   no   source   given</li>
           <li>There   is   no   author   given</li>
           <li>There   are   no   direct   quotes,   date   or   statistics/   data</li>
@@ -75,9 +75,9 @@
         </ol>
 
         <p>Your   job   is   to   decide   whether   the   things   other   users   shared   are   accurate   and   trustworthy.</p>
-        <p>If   you   see   that   another   user   is   sharing   news   or   facts   that   you   think   are   real,   hit   the   “like”   button next   to   their   posts.   If   you   think   that   their   posts   are   weird   or   questionable,   use   the   “reply” function   to   explain   to   them   why   you   think   their   posts   are   skeptical.</p>
-        <p>You   might   see   that   other   people   are   also   replying   to   the   same   posts   that   you’re   planning   to reply   to.   That’s   fine!   Just   state   your   opinion,   and   say   why   you   agree   or   disagree   with   their comments.</p>
-        <p>After   you’re   done,   scroll   through   the   news   feed   and   make   sure   you’re   happy   with   your   choices. When   you   complete   this   activity,   you’ll   get   a   chance   to   review   the   posts   you   reacted   to;   that   is posts   that   you   liked   and/or   replied   to.</p>
+        <p>If   you   see   that   another   user   is   sharing   news   or   facts   that   you   think   are   real,   hit   the   "like"   button next   to   their   posts.   If   you   think   that   their   posts   are   weird   or   questionable,   use   the   "reply" function   to   explain   to   them   why   you   think   their   posts   are   skeptical.</p>
+        <p>You   might   see   that   other   people   are   also   replying   to   the   same   posts   that   you're   planning   to reply   to.   That's   fine!   Just   state   your   opinion,   and   say   why   you   agree   or   disagree   with   their comments.</p>
+        <p>After   you're   done,   scroll   through   the   news   feed   and   make   sure   you're   happy   with   your   choices. When   you   complete   this   activity,   you'll   get   a   chance   to   review   the   posts   you   reacted   to;   that   is posts   that   you   liked   and/or   replied   to.</p>
         <p>Any   questions?</p>
         
         <p class="lessonsubheader">Optional   Activity:   Spread   Real   News</p>
@@ -88,14 +88,14 @@
         <ul>
           <li>What   kinds   of   posts   did   you   pick?   Why?</li>
           <li>How   are   the   posts   you   picked   similar   to   each   other?</li>
-          <li>How   easy   was   it   to   determine   what   posts   are   facts   and   which   aren’t?   What   makes   it easy   or   difficult?</li>
+          <li>How   easy   was   it   to   determine   what   posts   are   facts   and   which   aren't?   What   makes   it easy   or   difficult?</li>
           <li>Discuss   the   posts   you   chose   with   the   group   or   with   another   student.   Do   you   disagree with   any   of   the   comments   that   they   made?   Why?</li>
         </ul>
         
         <p class="lessonsubheader">Post-Activity   Questions</p>
         <p>Why   do   you   think   information   literacy   is   important? Why   do   you   think   identifying   fake   news   is   important?</p>
         <p>Do   you   think   you   have   the   skills   to   be   a   responsible   internet   citizen   when   searching   for   facts and   information?</p>
-        <p>Think   about   a   project   you’ve   done   in   the   past.   Where   did   you   look   for   information?   Were   your sources   trustworthy?</p>
+        <p>Think   about   a   project   you've   done   in   the   past.   Where   did   you   look   for   information?   Were   your sources   trustworthy?</p>
         <p>Think   about   posts   people   share   online.   How   would   you   identify   fake   posts   or   news   people share?</p>
         <p>How   will   you   help   your   friends   and   family   identify   false   information   online?</p>
         <p>If   you   have   to   make   a   post   that   conveys   facts   or   something   that   you   want   others   to   perceive   as truthful,   what   would   you   do?   What   kinds   of   things   would   you   include   in   your   post?</p>
