--- a/html/lessons.html
+++ b/html/lessons.html
@@ -11,17 +11,21 @@
     <body>
       <div class="topnav">
         <div id="logoCont">
-          <a id="logo" href="../index.html">TestDrive</a>
+          <a id="logo" href="../index.html">Social Media TestDrive</a>
         </div>
 
         <div id="linksCont">
           <a class="links" href="lessons.html"><p>Lessons</p></a>
           <a class="links" href="for_parents.html"><p>For Parents</p></a>
           <a class="links" href="about_us.html"><p>About Us</p></a>
+          <a class="links" href="gettingstarted.html"><p>Get Started</p><a>
         </div>
 
         <div id="loginCont">
-          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true"><div id="smallButton">Get Started</div></a>
+          <!--<div id="linksCont">
+            <a class="links" href="../lessons.html"><p>Lessons</p></a>
+            <a class="links" href="../for_parents.html"><p>For Parents</p></a>
+            <a class="links" href="../about_us.html"><p>About Us</p></a>-->
         </div>
       </div>
 
@@ -55,21 +59,20 @@
             <p> Evaluating the quality and veracity of facts and detecting fake news are vital skills for today's youth. This lesson will help teach kids to find and critically assess facts and data they find on social media sites, and to help others do the same. </p>
           </div>
         </div></a>
-        <!--
         <a href="lessonPage.html"><div class="lessonsBox">
-          <div class="likepic"><img src="../img/thumblike.png" width="100%" height="100%"></div>
+          <div class="likepic"><img src="../img/likes2.jpg" width="100%" height="100%"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">The Power of Likes</p>
+            <p class="lessonBox_title">COMING SOON: The Power of Likes</p>
             <p> Likes are a common way to show appreciation on social media sites. But sometimes people focus more on getting likes than on actually liking others.  This lesson will help kids think critically about what likes are, what it means to "like" something, and how to distinguish between popularity and quality of social media content. </p>
           </div>
         </div></a>
         <a href="lessonPage.html"><div class="lessonsBox">
           <div class="esteem-pic"><img src="../img/self-esteem.png" width="100%" height="100%"></div>
           <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Self Esteem and Self Image</p>
+            <p class="lessonBox_title">COMING SOON: Self Esteem and Self Image</p>
             <p>Social media sites, especially image-heavy ones, have received a lot of criticism for harming users' self-esteem. This lesson will encourage critical thinking about how we compare our real selves to others' carefully curated social media images of themselves. </p>
           </div>
-        </div></a>-->
+        </div></a>
 
       </div>
     </body>
