--- a/index.html
+++ b/index.html
@@ -12,18 +12,19 @@
     <body>
       <div class="topnav">
         <div id="logoCont">
-          <a id="logo" href="#testdrive">TestDrive</a>
+          <a id="logo" href="#testdrive">Social Media TestDrive</a>
         </div>
 
         <div id="linksCont">
           <a class="links" href="html/lessons.html"><p>Lessons</p></a>
           <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
           <a class="links" href="html/about_us.html"><p>About Us</p></a>
+          <a class="links" href="html/gettingstarted.html"><p>Get Started</p><a>
         </div>
 
-        <div id="loginCont">
+        <!--<div id="loginCont">
           <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true"><div id="smallButton">Get Started</div></a>
-        </div>
+        </div>-->
       </div>
 
      <div id="container">
