--- a/html/gettingstarted.html
+++ b/html/gettingstarted.html
@@ -11,19 +11,23 @@
     <body>
     	<div class="topnav">
         <div id="logoCont">
-          <a id="logo" href="../index.html">TestDrive</a>
+          <a id="logo" href="../index.html">Social Media TestDrive</a>
         </div>
-          
+
         <div id="linksCont">
           <a class="links" href="lessons.html"><p>Lessons</p></a>
           <a class="links" href="for_parents.html"><p>For Parents</p></a>
           <a class="links" href="about_us.html"><p>About Us</p></a>
+          <a class="links" href="gettingstarted.html"><p>Get Started</p></a>
+
         </div>
 
-        <div id="loginCont">
+        <!--<div id="loginCont">
           <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true"><div id="smallButton">Get Started</div></a>
-        </div>
+        </div> -->
       </div>
+
+      <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true" width=100% height=800px></iframe>
 
     </body>
 </html>
