--- a/html/lessons/gettingstarted.html
+++ b/html/lessons/gettingstarted.html
@@ -11,17 +11,18 @@
     <body>
     	<div class="topnav">
         <div id="logoCont">
-          <a id="logo" href="../../index.html">TestDrive</a>
+          <a id="logo" href="../../index.html">Social Media TestDrive</a>
         </div>
-          
+
         <div id="linksCont">
           <a class="links" href="../lessons.html"><p>Lessons</p></a>
           <a class="links" href="../for_parents.html"><p>For Parents</p></a>
           <a class="links" href="../about_us.html"><p>About Us</p></a>
+          <a class="links" href="../gettingstarted.html"><p>Get Started</p><a>
         </div>
 
-        <div id="loginCont">
-          <a href="gettingstarted.html"><div id="smallButton">Get Started</div></a>
+        <!--<div id="loginCont">
+          <a href="gettingstarted.html"><div id="smallButton">Get Started</div></a>-->
         </div>
       </div>
 
