Changed "About Us" double link and changed "Coming Soon" links

--- a/html/lessons.html
+++ b/html/lessons.html
@@ -59,14 +59,14 @@
             <p> Evaluating the quality and veracity of facts and detecting fake news are vital skills for today's youth. This lesson will help teach kids to find and critically assess facts and data they find on social media sites, and to help others do the same. </p>
           </div>
         </div></a>
-        <a href="lessonPage.html"><div class="lessonsBox">
+        <a href="#"><div class="lessonsBox">
           <div class="likepic"><img src="../img/likes2.jpg" width="100%" height="100%"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">COMING SOON: The Power of Likes</p>
             <p> Likes are a common way to show appreciation on social media sites. But sometimes people focus more on getting likes than on actually liking others.  This lesson will help kids think critically about what likes are, what it means to "like" something, and how to distinguish between popularity and quality of social media content. </p>
           </div>
         </div></a>
-        <a href="lessonPage.html"><div class="lessonsBox">
+        <a href="#"><div class="lessonsBox">
           <div class="esteem-pic"><img src="../img/self-esteem.png" width="100%" height="100%"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">COMING SOON: Self Esteem and Self Image</p>
