--- a/html/lessons/smartselfpres.html
+++ b/html/lessons/smartselfpres.html
@@ -18,7 +18,7 @@
           <a class="links" href="../lessons.html"><p>Lessons</p></a>
           <a class="links" href="../for_parents.html"><p>For Parents</p></a>
           <a class="links" href="../about_us.html"><p>About Us</p></a>
-          <a class="links" href="../gettingstarted.html"><p>About Us</p></a>
+          <a class="links" href="../gettingstarted.html"><p>Get Started</p></a>
         </div>
 
         <!--<div id="loginCont">
