--- a/html/lessons.html
+++ b/html/lessons.html
@@ -60,14 +60,14 @@
           </div>
         </div></a>
         <a href="#"><div class="lessonsBox">
-          <div class="likepic"><img src="../img/likes2.jpg" width="100%" height="100%"></div>
+          <div class="Top_PicHalf" id="lesson_PowerofLikes"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">COMING SOON: The Power of Likes</p>
             <p> Likes are a common way to show appreciation on social media sites. But sometimes people focus more on getting likes than on actually liking others.  This lesson will help kids think critically about what likes are, what it means to "like" something, and how to distinguish between popularity and quality of social media content. </p>
           </div>
         </div></a>
         <a href="#"><div class="lessonsBox">
-          <div class="esteem-pic"><img src="../img/self-esteem.png" width="100%" height="100%"></div>
+          <div class="Top_PicHalf" id="lesson_SelfEsteem"></div>
           <div class="Bottom_TextHalf">
             <p class="lessonBox_title">COMING SOON: Self Esteem and Self Image</p>
             <p>Social media sites, especially image-heavy ones, have received a lot of criticism for harming users' self-esteem. This lesson will encourage critical thinking about how we compare our real selves to others' carefully curated social media images of themselves. </p>
