--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>TestDrive</title>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
+        <link rel="shortcut icon" href="/img/logo.ico" type="image/x-icon" />
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>
         </script>
