--- a/html/lessons/cyberbullying.html
+++ b/html/lessons/cyberbullying.html
@@ -82,25 +82,35 @@
         <p>After   you're   done   scrolling   through   the   news   feed   and   offering   feedback,   click   "next."   You'll   get a   chance   to   review   the   posts   you   have   reacted   to.</p>
         <p>Any   questions?</p>
 
-<p class="lessonsubheader">Optional   Activity:   Say   Something   Positive</p>
-<p>If   they   complete   the   News   Feed   activity   early,   participants   can   make   their   own   posts   on   the   site that   use   the   upstanding   skills   they've   learned.</p>
+        <p class="lessonsubheader">Optional   Activity:   Say   Something   Positive</p>
+        <p>If   they   complete   the   News   Feed   activity   early,   participants   can   make   their   own   posts   on   the   site that   use   the   upstanding   skills   they've   learned.</p>
 
-<p class="lessonsubheader">Post-Activity   Discussion</p>
-<p>Review   the   types   of   posts   you   commented   on.</p>
-<ul>
-<li>Why   did   you   respond   the   way   you   did?   What   kinds   of   things   did   you   say?</li>
-<li>What   kinds   of   posts   did   you   flag?   Why   did   you   flag   them?</li>
-<li>Discuss   the   posts   you   flagged   and   replied   to   with   someone   else   in   the   group.   Did   both   of you   flag   the   same   posts?   Do   you   agree   with   his   or   her   replies?   Are   there   any   posts   you wished   you   flagged   or   replied   but   you   did   not?   Why?</li>
-<li>What   kinds   of   posts   did   you   "like"?</li>
-<li>If   you   made   your   own   post,   what   did   your   post   say?   Why?</li>
-</ul>
-<p class="lessonsubheader">Post-Activity   Questions</p>
-<p>What   do   you   think   are   the   consequences   of   cyberbullying?   For   the   victim?   For   the   bully? Think   about   the   websites      you   go   on   or   the   social   media   sites   you   use.   Do   you   ever   see cyberbullying   happen   on   those   sites?   What   will   you   do   to   stop   it?</p>
-<p>How   is   being   an   upstander   different   offline   and   online?   What   are   things   that   we   need   to   think carefully   about   when   trying   to   stop   a   cyberbully?   (anonymity,   retaliation,   etc)</p>
-<br>
-<p><i>Compiled   October   2017   by   the   Cornell   Social   Media   Lab   -   sml.comm.cornell.edu
-  <p>Feedback   is   welcome!</i></p>
+        <p class="lessonsubheader">Post-Activity   Discussion</p>
+        <p>Review   the   types   of   posts   you   commented   on.</p>
+        <ul>
+        <li>Why   did   you   respond   the   way   you   did?   What   kinds   of   things   did   you   say?</li>
+        <li>What   kinds   of   posts   did   you   flag?   Why   did   you   flag   them?</li>
+        <li>Discuss   the   posts   you   flagged   and   replied   to   with   someone   else   in   the   group.   Did   both   of you   flag   the   same   posts?   Do   you   agree   with   his   or   her   replies?   Are   there   any   posts   you wished   you   flagged   or   replied   but   you   did   not?   Why?</li>
+        <li>What   kinds   of   posts   did   you   "like"?</li>
+        <li>If   you   made   your   own   post,   what   did   your   post   say?   Why?</li>
+        </ul>
+        <p class="lessonsubheader">Post-Activity   Questions</p>
+        <p>What   do   you   think   are   the   consequences   of   cyberbullying?   For   the   victim?   For   the   bully? Think   about   the   websites      you   go   on   or   the   social   media   sites   you   use.   Do   you   ever   see cyberbullying   happen   on   those   sites?   What   will   you   do   to   stop   it?</p>
+        <p>How   is   being   an   upstander   different   offline   and   online?   What   are   things   that   we   need   to   think carefully   about   when   trying   to   stop   a   cyberbully?   (anonymity,   retaliation,   etc)</p>
+        <br>
+        <p><i>Compiled   October   2017   by   the   Cornell   Social   Media   Lab   -   sml.comm.cornell.edu
+          <p>Feedback   is   welcome!</i></p>
 
+      </div>
+
+      <div class="footer">
+        <div class="footCont_title"><a class="fTL" href="../../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
+        <div class="footCont_links">
+          <a class="footerlinks" href="../lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="../for_parents.html"><p>For Parents</p></a>
+          <a class="footerlinks" href="../about_us.html"><p>About Us</p></a>
+          <a class="footerlinks" href="../gettingstarted.html"><p>Get Started</p><a>
+        </div>
       </div>
 
     </body>
