--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <div class="LL_img" id="home_CyberBullying"></div>
           <div class="LL_text">
             <p class="lessonBox_title">Stopping Cyberbullying</p>
-            <p>This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes “upstanding” behavior in cyberbullying situations.</p>
+            <p>This lesson will help kids learn to detect signs of cyberbullying, and let them practice reacting appropriately if they do detect it. It builds on work that promotes "upstanding" behavior in cyberbullying situations.</p>
           </div>
         </div>
       </a>
@@ -85,6 +85,16 @@
         </div></a>
       </div>
     </div>-->
+
+    <div class="footer">
+      <div class="footCont_title"><a class="fTL" href="index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
+      <div class="footCont_links">
+        <a class="footerlinks" href="html/lessons.html"><p>Lessons</p></a>
+        <a class="footerlinks" href="html/for_parents.html"><p>For Parents</p></a>
+        <a class="footerlinks" href="html/about_us.html"><p>About Us</p></a>
+        <a class="footerlinks" href="html/gettingstarted.html"><p>Get Started</p><a>
+      </div>
+    </div>
 
     </body>
 </html>
