--- a/html/about_us.html
+++ b/html/about_us.html
@@ -45,5 +45,15 @@
         <p>TestDrive is still in beta. To receive access, you will need to contact the program administrator directly using the contact form on the Get Started page.</p>
       </div>
 
+      <div class="footer">
+        <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
+        <div class="footCont_links">
+          <a class="footerlinks" href="lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
+          <a class="footerlinks" href="about_us.html"><p>About Us</p></a>
+          <a class="footerlinks" href="gettingstarted.html"><p>Get Started</p><a>
+        </div>
+      </div>
+
     </body>
 </html>
