--- a/html/gettingstarted.html
+++ b/html/gettingstarted.html
@@ -30,5 +30,15 @@
 
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true" width=100% height=800px></iframe>
 
+      <div class="footer">
+        <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
+        <div class="footCont_links">
+          <a class="footerlinks" href="lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
+          <a class="footerlinks" href="about_us.html"><p>About Us</p></a>
+          <a class="footerlinks" href="gettingstarted.html"><p>Get Started</p><a>
+        </div>
+      </div>
+
     </body>
 </html>
