--- a/html/lessons/gettingstarted.html
+++ b/html/lessons/gettingstarted.html
@@ -57,5 +57,14 @@
       <p>When students are done setting up their accounts and are sure they can log in correctly, they will be able to access the other three TestDrive modules (self-presentation, cyberbullying, and information literacy).</p>
 
       </div>
+      <div class="footer">
+        <div class="footCont_title"><a class="fTL" href="../../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
+        <div class="footCont_links">
+          <a class="footerlinks" href="../lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="../for_parents.html"><p>For Parents</p></a>
+          <a class="footerlinks" href="../about_us.html"><p>About Us</p></a>
+          <a class="footerlinks" href="../gettingstarted.html"><p>Get Started</p><a>
+        </div>
+      </div>
     </body>
 </html>
