--- a/html/lessons/informationliteracy.html
+++ b/html/lessons/informationliteracy.html
@@ -107,5 +107,14 @@
         <p>Compiled   October   2017   by   the   Cornell   Social   Media   Lab   -   sml.comm.cornell.edu </p>
         <p>Feedback   is   welcome!</i></p>
       </div>
+      <div class="footer">
+        <div class="footCont_title"><a class="fTL" href="../../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
+        <div class="footCont_links">
+          <a class="footerlinks" href="../lessons.html"><p>Lessons</p></a>
+          <a class="footerlinks" href="../for_parents.html"><p>For Parents</p></a>
+          <a class="footerlinks" href="../about_us.html"><p>About Us</p></a>
+          <a class="footerlinks" href="../gettingstarted.html"><p>Get Started</p><a>
+        </div>
+      </div>
     </body>
 </html>
