--- a/html/lessons.html
+++ b/html/lessons.html
@@ -18,7 +18,8 @@
         <div id="linksCont">
           <a class="links" href="lessons.html"><p>Lessons</p></a>
           <a class="links" href="for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="about_us.html"><p>About Us</p></a>
+          <a class="links" href="about_us.html"><p>About</p></a>
+          <a class="links" href="team.html"><p>The Team</p></a>
           <a class="links" href="gettingstarted.html"><p>Get Started</p><a>
         </div>
 
@@ -81,7 +82,8 @@
         <div class="footCont_links">
           <a class="footerlinks" href="lessons.html"><p>Lessons</p></a>
           <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
-          <a class="footerlinks" href="about_us.html"><p>About Us</p></a>
+          <a class="footerlinks" href="about_us.html"><p>About</p></a>
+          <a class="footerlinks" href="team.html"><p>The Team</p></a>
           <a class="footerlinks" href="gettingstarted.html"><p>Get Started</p><a>
         </div>
       </div>
