--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <div id="linksCont">
           <a class="links" href="html/lessons.html"><p>Lessons</p></a>
           <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="html/about_us.html"><p>About Us</p></a>
+          <a class="links" href="html/about_us.html"><p>About</p></a>
+          <a class="links" href="html/team.html"><p>The Team</p></a>
           <a class="links" href="html/gettingstarted.html"><p>Get Started</p><a>
         </div>
 
@@ -91,7 +92,8 @@
       <div class="footCont_links">
         <a class="footerlinks" href="html/lessons.html"><p>Lessons</p></a>
         <a class="footerlinks" href="html/for_parents.html"><p>For Parents</p></a>
-        <a class="footerlinks" href="html/about_us.html"><p>About Us</p></a>
+        <a class="footerlinks" href="about_us.html"><p>About</p></a>
+        <a class="footerlinks" href="team.html"><p>The Team</p></a>
         <a class="footerlinks" href="html/gettingstarted.html"><p>Get Started</p><a>
       </div>
     </div>
