--- a/html/about_us.html
+++ b/html/about_us.html
@@ -18,7 +18,8 @@
         <div id="linksCont">
           <a class="links" href="lessons.html"><p>Lessons</p></a>
           <a class="links" href="for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="about_us.html"><p>About Us</p></a>
+          <a class="links" href="about_us.html"><p>About</p></a>
+          <a class="links" href="team.html"><p>The Team</p></a>
           <a class="links" href="gettingstarted.html"><p>Get Started</p><a>
         </div>
 
@@ -29,7 +30,7 @@
         </div>
       </div>
 
-      <div class="lessonheader"><h1 class="lessontitle">About Us</h1></div>
+      <div class="lessonheader"><h1 class="lessontitle">About Social Media TestDrive</h1></div>
       <div class="lessoncontent">
         <p>Social media sites are where life happens for many of today's young people, so it's important to teach them to use these sites safely and effectively. However, there aren't currently ways for kids who are too young to have social media accounts of their own to practice these skills in a safe environment.</p>
         <p>Like a driving simulator for young people learning to drive for the first time, TestDrive is a safe social media simulation that lets young people practice the skills they learn in the classroom. It looks and feels like a real social media site, but instead of being populated by strangers from all over the world, all of the other users are "bots" pre-programmed by the site's creators. Young people can practice interacting with other "users" and their posts without worrying about "stranger danger". They can also practice setting their privacy settings, making their own posts, and other important social media skills without worrying about the consequences of getting things wrong.</p>
@@ -50,7 +51,8 @@
         <div class="footCont_links">
           <a class="footerlinks" href="lessons.html"><p>Lessons</p></a>
           <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
-          <a class="footerlinks" href="about_us.html"><p>About Us</p></a>
+          <a class="footerlinks" href="about_us.html"><p>About</p></a>
+          <a class="footerlinks" href="team.html"><p>The Team</p></a>
           <a class="footerlinks" href="gettingstarted.html"><p>Get Started</p><a>
         </div>
       </div>
