navigation in separate file

--- a/html/team.html
+++ b/html/team.html
@@ -8,25 +8,7 @@
         <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
         </script>
     <body>
-    	<div class="topnav">
-        <div id="logoCont">
-          <a id="logo" href="../index.html">Social Media TestDrive</a>
-        </div>
-
-        <div id="linksCont">
-          <a class="links" href="lessons.html"><p>Lessons</p></a>
-          <a class="links" href="for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="about_us.html"><p>About</p></a>
-          <a class="links" href="team.html"><p>The Team</p></a>
-          <a class="links" href="gettingstarted.html"><p>Get Started</p><a>
-        </div>
-
-        <!--<div id="linksCont">
-          <a class="links" href="../lessons.html"><p>Lessons</p></a>
-          <a class="links" href="../for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="../about_us.html"><p>About Us</p></a>-->
-        </div>
-      </div>
+      <div id="topNav"></div>
 
       <div class="lessonheader"><h1 class="lessontitle">Meet the Team</h1></div>
       <div class="lessoncontent">
@@ -49,16 +31,8 @@
         <p>Social Media TestDrive is supported by the generosity of the Bronfenbrenner Center for Translational Research and by National Science Foundation award #1405634. </p>
       </div>
 
-      <div class="footer">
-        <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
-        <div class="footCont_links">
-          <a class="footerlinks" href="lessons.html"><p>Lessons</p></a>
-          <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
-          <a class="footerlinks" href="about_us.html"><p>About</p></a>
-          <a class="footerlinks" href="team.html"><p>The Team</p></a>
-          <a class="footerlinks" href="gettingstarted.html"><p>Get Started</p><a>
-        </div>
-      </div>
+      <div id="bottomNav"></div>
+      <script src="nav.js"></script>
 
     </body>
 </html>
