--- a/index.html
+++ b/index.html
@@ -9,23 +9,7 @@
         </script>
     </head>
     <body>
-      <div class="topnav">
-        <div id="logoCont">
-          <a id="logo" href="#testdrive">Social Media TestDrive</a>
-        </div>
-
-        <div id="linksCont">
-          <a class="links" href="html/lessons.html"><p>Lessons</p></a>
-          <a class="links" href="html/for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="html/about_us.html"><p>About</p></a>
-          <a class="links" href="html/team.html"><p>The Team</p></a>
-          <a class="links" href="html/gettingstarted.html"><p>Get Started</p><a>
-        </div>
-
-        <!--<div id="loginCont">
-          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true"><div id="smallButton">Get Started</div></a>
-        </div>-->
-      </div>
+      <div id="topNav"></div>
 
      <div id="container">
       <div id="homePage_s1" class="section1">
@@ -59,42 +43,8 @@
       <a class="lesson_button" href="html/lessons.html">View all our lessons >></a>
       </div>
 
-      <!--<div class="section3">
-        <h2>For Parents</h2>
-        <a href="html/lessonPage.html"><div class="forparents_lessons">
-          <div class="Top_PicHalf"></div>
-          <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-        </div></a>
-        <a href="html/lessonPage.html"><div class="forparents_lessons">
-          <div class="Top_PicHalf"></div>
-          <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-        </div></a>
-        <a href="html/lessonPage.html"><div class="forparents_lessons">
-          <div class="Top_PicHalf"></div>
-          <div class="Bottom_TextHalf">
-            <p class="lessonBox_title">Lorem Ipsum</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-        </div></a>
-      </div>
-    </div>-->
-
-    <div class="footer">
-      <div class="footCont_title"><a class="fTL" href="index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
-      <div class="footCont_links">
-        <a class="footerlinks" href="html/lessons.html"><p>Lessons</p></a>
-        <a class="footerlinks" href="html/for_parents.html"><p>For Parents</p></a>
-        <a class="footerlinks" href="about_us.html"><p>About</p></a>
-        <a class="footerlinks" href="team.html"><p>The Team</p></a>
-        <a class="footerlinks" href="html/gettingstarted.html"><p>Get Started</p><a>
-      </div>
-    </div>
+    <div id="bottomNav"></div>
+    <script src="nav.js"></script>
 
     </body>
 </html>
