--- a/html/about_us.html
+++ b/html/about_us.html
@@ -7,26 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:600,700|Open+Sans" rel="stylesheet">
         <link rel="shortcut icon" href="../img/logo.ico" type="image/x-icon" />
     <body>
-    	<div class="topnav">
-        <div id="logoCont">
-          <a id="logo" href="../index.html">Social Media TestDrive</a>
-        </div>
-
-        <div id="linksCont">
-          <a class="links" href="lessons.html"><p>Lessons</p></a>
-          <a class="links" href="for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="about_us.html"><p>About</p></a>
-          <a class="links" href="team.html"><p>The Team</p></a>
-          <a class="links" href="gettingstarted.html"><p>Get Started</p><a>
-        </div>
-
-        <!--<div id="linksCont">
-          <a class="links" href="../lessons.html"><p>Lessons</p></a>
-          <a class="links" href="../for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="../about_us.html"><p>About Us</p></a>-->
-        </div>
-      </div>
-
+      <div id="topNav"></div>
       <div class="lessonheader"><h1 class="lessontitle">About Social Media TestDrive</h1></div>
       <div class="lessoncontent">
         <p>Social media sites are where life happens for many of today's young people, so it's important to teach them to use these sites safely and effectively. However, there aren't currently ways for kids who are too young to have social media accounts of their own to practice these skills in a safe environment.</p>
@@ -50,16 +31,8 @@ assign them to your class. You’ll be able to see their usernames, quiz scores,
         <a href="Educator Account Instructions.pdf"> Educator Account Instructions</a>
       </div>
 
-      <div class="footer">
-        <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
-        <div class="footCont_links">
-          <a class="footerlinks" href="lessons.html"><p>Lessons</p></a>
-          <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
-          <a class="footerlinks" href="about_us.html"><p>About</p></a>
-          <a class="footerlinks" href="team.html"><p>The Team</p></a>
-          <a class="footerlinks" href="gettingstarted.html"><p>Get Started</p><a>
-        </div>
-      </div>
+      <div id="bottomNav"></div>
+      <script src="nav.js"></script>
 
     </body>
 </html>
