--- a/html/gettingstarted.html
+++ b/html/gettingstarted.html
@@ -9,37 +9,12 @@
 
         </script>
     <body>
-    	<div class="topnav">
-        <div id="logoCont">
-          <a id="logo" href="../index.html">Social Media TestDrive</a>
-        </div>
-
-        <div id="linksCont">
-          <a class="links" href="lessons.html"><p>Lessons</p></a>
-          <a class="links" href="for_parents.html"><p>For Parents</p></a>
-          <a class="links" href="about_us.html"><p>About</p></a>
-          <a class="links" href="team.html"><p>The Team</p></a>
-          <a class="links" href="gettingstarted.html"><p>Get Started</p></a>
-
-        </div>
-
-        <!--<div id="loginCont">
-          <a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true"><div id="smallButton">Get Started</div></a>
-        </div> -->
-      </div>
+      <div id="topNav"></div>
 
       <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeGOnDC_tCMTItJZmKe81w7bEyhyhLAvqbMATr41ITzqnar5g/viewform?embedded=true" width=100% height=800px></iframe>
 
-      <div class="footer">
-        <div class="footCont_title"><a class="fTL" href="../index.html"><p class="footertitle">Social Media</p><p class="footertitle">TestDrive</p><a></div>
-        <div class="footCont_links">
-          <a class="footerlinks" href="lessons.html"><p>Lessons</p></a>
-          <a class="footerlinks" href="for_parents.html"><p>For Parents</p></a>
-          <a class="footerlinks" href="about_us.html"><p>About</p></a>
-          <a class="footerlinks" href="team.html"><p>The Team</p></a>
-          <a class="footerlinks" href="gettingstarted.html"><p>Get Started</p><a>
-        </div>
-      </div>
+      <div id="bottomNav"></div>
+      <script src="nav.js"></script>
 
     </body>
 </html>
